# AI_Twin

./: .gitignore  AI_Behavioral_Guardian_Launcher.bat  CHANGES.md  DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  demo_user_alice.csv  pyproject.toml  render.yaml  requirements-local.txt  requirements.txt  train_from_csv.py  vercel.json
api/: index.py  requirements.txt
behavioral_guardian/: __init__.py
behavioral_guardian/agent/: __init__.py  agent_runner.py  download_monitor.py  feature_extractor.py  keyboard_collector.py  mouse_collector.py  network_monitor.py  process_monitor.py  usb_monitor.py
behavioral_guardian/backend/: dependencies.py  main.py
behavioral_guardian/config/: __init__.py  settings.py
behavioral_guardian/data/: .gitkeep
behavioral_guardian/database/: __init__.py  connection.py  models.py  repositories.py
behavioral_guardian/logs/: .gitkeep
behavioral_guardian/ml/: __init__.py  baseline.py  enrollment.py  inference.py  persistence.py  trainer.py
behavioral_guardian/tests/: __init__.py  conftest.py  test_analytics.py  test_api.py  test_auth.py  test_auth_protection.py  test_database.py  test_integration.py  test_response_engine.py  test_risk_engine.py  test_settings.py  test_trust_engine.py  test_users.py
behavioral_guardian/utils/: __init__.py  (+2 more)
docs/: api_contract.md  architecture.md  database_schema.md  development_phases.md  engineering_constitution.md  folder_structure.md  integration_checklist.md  team_playbook.md
frontend/: package-lock.json  package.json  tailwind.config.js
packaging/: agent.spec  build_agent.bat
(+84 files in other folders)
