[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "behavioral-guardian"
version = "0.1.0"
description = "AI Behavioral Guardian — continuous behavioral authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "pynput>=1.7.6",
    "watchdog>=4.0.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "pyjwt>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["behavioral_guardian*"]

[tool.pytest.ini_options]
testpaths = ["behavioral_guardian/tests"]
